crates/parser/tests/snapshots/block_string_0_folded_strip_wsln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-folded-strip-wsln-dedent

## Input

```
key >-
 
other val

```

## CST

```
SOURCE_FILE@0..19
  ENTRY@0..9
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..7
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
    SPACE@7..8 " "
    NEWLINE@8..9 "\n"
  ENTRY@9..19
    WORD_KEY@9..14
      WORD@9..14 "other"
    SPACE@14..15 " "
    LINE_STRING@15..18
      STRING@15..18 "val"
    NEWLINE@18..19 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: MINUS@5..6 "-",
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@9..14 "other",
            },
            value: LineString {
                string: STRING@15..18 "val",
            },
        },
    ],
}
```

vim:ft=markdown
